WebKit Bugzilla
New
Browse
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
242687
REGRESSION (Safari 16 beta, STP): WebArchive can't be loaded
https://bugs.webkit.org/show_bug.cgi?id=242687
Summary
REGRESSION (Safari 16 beta, STP): WebArchive can't be loaded
crispygoti
Reported
2022-07-13 04:44:09 PDT
Created
attachment 460855
[details]
Webarchive of www.angular.io Since iOS 16 Beta / Safari 16 opening WebArchives doesn't work correctly anymore. It looks like no JavaScript is executed anymore (or just script tags in the body tag?). This breaks all Angular based applications. This can be verified by opening Safari Technology Preview and by saving the official Angular website (
https://angular.io
) as a webarchive - after that just open the webarchive again. You'll notice that the website shows a few broken HTML elements - the application itself is completely broken. The same WebArchive works perfectly fine in the latest stable Safari (15.5). Our iOS app makes heavy use of WebArchives to improve performance of web content inside the app which is used by millions of users every day. I hope we can get this sorted out before the official iOS 16 Release. An example webarchive is added as an attachment. It opens fine on Safari 15.5, doesn't work on Safari Technology Preview.
Attachments
Webarchive of www.angular.io
(1.42 MB, application/x-webarchive)
2022-07-13 04:44 PDT
,
crispygoti
no flags
Details
View All
Add attachment
proposed patch, testcase, etc.
Radar WebKit Bug Importer
Comment 1
2022-07-13 13:33:35 PDT
<
rdar://problem/96970629
>
Matthew Finkel
Comment 2
2022-09-13 07:41:32 PDT
Pull request:
https://github.com/webkit/WebKit/pull/4311
Matthew Finkel
Comment 3
2022-11-01 09:59:13 PDT
Problem resolved by reverting the original change.
crispygoti
Comment 4
2022-11-03 01:18:49 PDT
In what Safari version will this be fixed then?
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug