REGRESSION (Safari 16 beta, STP): WebArchive can't be loaded https://bugs.webkit.org/show_bug.cgi?id=242687 <rdar://96970629>

Reviewed by NOBODY (OOPS!).

Relative resource paths were not correctly resolved when loaded from
WebArchives. For example. the webarchive's document's baseURL resolution had a
problem when the document contained a base element with a relative path (e.g.,
<base href="/">). In addition, some DOM behavior could cause page
incompatibility. Now when every resource is loaded from a WebArchive, its URL
is prefixed with "webarchive+".

* Source/WebCore/loader/DocumentLoader.cpp:
(WebCore::DocumentLoader::commitData):
* Source/WebCore/loader/archive/ArchiveResource.h:
* Source/WebCore/loader/archive/ArchiveResourceCollection.cpp:
(WebCore::ArchiveResourceCollection::addResource):
(WebCore::ArchiveResourceCollection::archiveResourceForURL):
* Source/WebCore/loader/archive/ArchiveResourceCollection.h:
* Source/WebCore/loader/archive/cf/LegacyWebArchive.cpp:
(WebCore::LegacyWebArchive::createResource):
* Source/WebCore/page/SecurityOrigin.cpp:
(WebCore::shouldTreatAsOpaqueOrigin):